# balls

./: .gitmodules  add_upstream.sh
art/: peasant1-cut.xcf  peasant1.xcf
art/peasant/: peasant.atlas  peasant.skel  peasant.spine  peasant1-cut.json  skeleton.skel
game/: Cargo.toml  imgui.ini
game/ai/: Cargo.toml
game/ai/src/: lib.rs  movement.rs  needs.rs  pathfinding.rs  task.rs  utility.rs
game/ai/src/bt/: mod.rs
game/ai/src/iaus/: mod.rs  simple.rs
game/ai/src/iaus/curves/: mod.rs
game/ai/src/iaus/decisions/: mod.rs
game/assets/defs/: bodies.def  buildings.def  creatures.def  foliages.def  items.def  races.def  reactions.def  workshops.def
game/assets/defs/items/: foods.def
game/assets/defs/materials/: materials.def
game/assets/shaders/: debug.frag  debug.vert  entities.vert  imgui.frag  imgui.vert  isometric_tiles.frag  isometric_tiles.vert  sparse_sprites.frag  sparse_sprites.vert  spine.frag  spine.vert  tiles.frag  tiles.vert
game/assets/shaders/desc/: sprite_properties.glsl
game/assets/shaders/gl/: imgui.frag  imgui.vert
game/assets/shaders/util/: coords.glsl  flat.glsl  morton.glsl  sprite.glsl
game/client/: Cargo.toml
game/client/src/: inventory.rs  item_physics.rs  main.rs  spawners.rs  stockpile.rs  test.rs  weather.rs
game/client/src/behavior/: haul.rs  mod.rs  needs.rs  task.rs
game/client/src/behavior/creature/: mod.rs
game/client/src/debug/: ai.rs  iaus.rs  mod.rs  palette.rs  perf.rs
game/client/src/saveload/: mod.rs  ser.rs
game/core/: Cargo.toml
game/core/src/: app.rs  bitflags_serial.rs  blackboard.rs  camera.rs  components.rs  condition.rs  data.rs  debug.rs  dispatcher.rs  ecs_manager.rs  event.rs  garbage_collector.rs  input.rs  inventory.rs  lib.rs  math.rs  saveload.rs  settings.rs  time.rs  transform.rs
game/core/src/defs/: body.rs  building.rs  common.rs  condition.rs  creature.rs  foliage.rs  item.rs  material.rs  mod.rs  needs.rs  race.rs  reaction.rs  workshop.rs
game/core/src/map/: encoders.rs  generate_region.rs  mod.rs  spatial.rs  systems.rs  tile.rs
game/core/src/systems/: progress_bar.rs
game/data/: imgui.ini
game/macros/: Cargo.toml
game/macros/src/: lib.rs
game/reaction/: Cargo.toml
game/reaction/src/: lib.rs  map_transformations.rs  needs.rs
game/render/: Cargo.toml
game/render/src/: context.rs  factory.rs  lib.rs
game/render/src/resources/: buffer.rs  mod.rs  texture.rs
game/render_glow/: Cargo.toml
game/render_glow/src/: buffer.rs  lib.rs  manager.rs  shader.rs  state.rs  texture.rs  vertex.rs
game/render_glow/src/pass/: debug.rs
game/render_pod/: Cargo.toml
game/render_pod/src/: color.rs  lib.rs  pod.rs  shader.rs  sprite.rs
game/render_vk/: Cargo.toml
game/render_vk/src/: lib.rs  manager.rs  shader.rs
game/render_vk/src/data/: buffer.rs  builders.rs  mod.rs  texture.rs
game/render_vk/src/pass/: debug.rs  entities.rs  map.rs  mod.rs  sparse_sprite.rs  spine.rs
game/render_vk/src/utils/: mod.rs
game/ui/: Cargo.toml
game/ui/src/: imgui_gl_pass.rs  imgui_manager.rs  imgui_vk_pass.rs  lib.rs  mapgen.rs  nuklear_manager.rs  placement.rs  selection.rs  tasks.rs  tools.rs
