[package]
name = "rl_render"
version = "0.1.0"
authors = ["Walter Pearce <jaynus@gmail.com>"]
edition = "2018"


[dependencies]
rl_render_pod = { path = "../render_pod" }
rl_core = { path = "../core" }

log = "0.4"
thiserror = "1"
anyhow = "1"
derivative = "2"
shrinkwraprs = "*"
slotmap = "*"
parking_lot = "*"
smallvec = "*"

winit = { version = "0.22" }
vk-mem = { version = "*" }
ash = { version = "*" }

[[example]]
name = "test"